--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,9 @@ body {
 .team {
   background-color: #f4f4fd;
 }
+.team-back {
+  background-color: #ffffff;
+}
 .team > h2 {
   font-weight: 700;
   font-size: 36px;
@@ -126,10 +129,11 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: var(--color-navy);
 }
 .team p {
   font-size: 16px;
-  line-height: 1.2;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
