--- a/css/style.css
+++ b/css/style.css
@@ -88,14 +88,15 @@ body {
   background-color: var(--color-hover);
 }
 /* ADVANTAGES */
-.advantages {
+/* .advantages {
   color: var(--color-navy);
-}
+} */
 .adv-first-head {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: var(--color-navy);
 }
 .adv-text {
   font-size: 16px;
@@ -158,7 +159,7 @@ body {
 }
 /* /FOOTER */
 /* --------------------------------PORTFOLIO------------------------------------- */
-/* FILTER */
+/* MAIN */
 .filter button {
   font-weight: 500;
   font-size: 16px;
@@ -167,8 +168,6 @@ body {
   color: var(--color-blue);
   background-color: var(--ghost-white);
 }
-/* /FILTER */
-/* PRIVILEGE SECTION */
 .secondary-btn {
   font-family: "Roboto", Sans-serif;
   cursor: pointer;
@@ -178,16 +177,4 @@ body {
   color: var(--color-white);
   background-color: var(--color-hover);
 }
-/* .privilege h2 {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-}
-.privilege p {
-  font-size: 16px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: var(--color-grey);
-} */
-/* /PRIVILEGE SECTION */
+/* /MAIN */
